src/objects/OrderItem__c.object
<CustomObject>
    <fields>
        <fullName>AccountMasterPropRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>商品属性情報</label>
        <referenceTo>AccountMasterProp__c</referenceTo>
        <relationshipLabel>注文明細</relationshipLabel>
        <relationshipName>StdAccountMasterPropRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountMasterRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会計商品</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>注文明細</relationshipLabel>
        <relationshipName>StmAccountMasterRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>合計</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <label>手数料</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpoOrgInfoRefCal__c</fullName>
        <formula>AccountMasterRef__r.ExpoOrgInfoRef__c</formula>
        <label>Expo組織情報ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <inlineHelpText>お客様側から注文際に、該当商品メモ情報を格納する</inlineHelpText>
        <label>メモ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrderDateCal__c</fullName>
        <formula>DATEVALUE(RefParOrder__r.CreatedDate )</formula>
        <label>受注日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriceNoTax__c</fullName>
        <label>単価金額（税抜）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>数量</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefParOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>注文</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipName>refParOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RefSubOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>注文サブ</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipName>RefSubOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RepeaterFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>定期購入フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RepeaterPayType__c</fullName>
        <label>定期払い方式</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>年払</fullName>
                </value>
                <value>
                    <fullName>月払</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StaffPriceFlg__c</fullName>
        <label>人材単価フラグ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>人材ではない</fullName>
                </value>
                <value>
                    <fullName>日給</fullName>
                </value>
                <value>
                    <fullName>時給</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StockUnit__c</fullName>
        <label>単位</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkContractFilter__c</fullName>
        <label>契約日と契約時間帯</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkContractRange__c</fullName>
        <label>契約期間</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkContractStartDate__c</fullName>
        <inlineHelpText>契約開始日（契約系利用）</inlineHelpText>
        <label>契約開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkContractTerm__c</fullName>
        <label>期間</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>注文明細</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>STD_{YYYYMMDD}_{00000000}</displayFormat>
        <label>注文明細#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>